cluster/homelab/apps/database/lazy-tools.yaml
# phpMyAdmin⁠
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: database
  labels:
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: phpmyadmin
      app.kubernetes.io/name: phpmyadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: phpmyadmin
        app.kubernetes.io/name: phpmyadmin
    spec:
      nodeSelector:
        kubernetes.io/arch: "amd64"
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin:5.2.1
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            timeoutSeconds: 2
            tcpSocket:
              port: 80
          startupProbe:
            failureThreshold: 10
            timeoutSeconds: 2
            tcpSocket:
              port: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: database
spec:
  selector:
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
  ports:
    - name: phpmyadmin
      protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: database
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - "*.k3s.hyde.services"
      secretName: wildcard.hyde.services
  rules:
    - host: phpmyadmin.k3s.hyde.services
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
---
# phpPgAdmin
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phppgadmin
  namespace: database
  labels:
    app.kubernetes.io/instance: phppgadmin
    app.kubernetes.io/name: phppgadmin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: phppgadmin
      app.kubernetes.io/name: phppgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: phppgadmin
        app.kubernetes.io/name: phppgadmin
    spec:
      nodeSelector:
        kubernetes.io/arch: "amd64"
      containers:
        - name: phppgadmin
          image: snimshchikov/phppgadmin:latest # no other tags 🤨
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            timeoutSeconds: 2
            tcpSocket:
              port: 80
          startupProbe:
            failureThreshold: 10
            timeoutSeconds: 2
            tcpSocket:
              port: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: phppgadmin
  namespace: database
spec:
  selector:
    app.kubernetes.io/instance: phppgadmin
    app.kubernetes.io/name: phppgadmin
  ports:
    - name: phppgadmin
      protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phppgadmin
  namespace: database
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - "*.k3s.hyde.services"
      secretName: wildcard.hyde.services
  rules:
    - host: phppgadmin.k3s.hyde.services
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: phppgadmin
                port:
                  number: 80
